--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
 </head>
 <body>
 
+       <div id="preloader">
+              <div class="circle"></div>
+              <div class="circle"></div>
+              <div class="circle"></div>
+              <div class="shadow"></div>
+              <div class="shadow"></div>
+              <div class="shadow"></div>
+              <span>Loading</span>
+       </div>
+
+       <div class="wrapper" id="none">
+              <div class="player">
+                    <div class="title"><p>Slavik Pogosov > Monro</p></div>
+                    <audio class="audio" onclick="playSong()" onclick="pauseSong()" src="/audio/slavik-pogosov-monro-mp3.mp3"></audio>
+                          <div class="buttonsPp">
+                                <div class="btn play"><img class="img__src" src="/audio/play.svg"></div>
+                          </div>
+              </div>
+         </div> <!-- Эта музыка не будет работать щас т.к идет на проверку(P.S после проверки на synarge пойдет в git =) -->
+
        <div class="QuestFirst">
               <div class="none-display" id="firstQuest"></div>
               <div class="none-display" id="firstQuestText">Это квест с кнопкой .Он не сложный =)</div>
@@ -19,5 +39,6 @@
        </div>
 
        <script src="/script.js"></script>
+
 </body>
 </html>
