--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
        <div class="wrapper" id="none">
               <div class="player">
-                    <div class="title"><p>Slavik Pogosov > Monro</p></div>
+                    <div class="title"><p>Slavik Pogosov → Monro</p></div>
                     <audio class="audio" onclick="playSong()" onclick="pauseSong()" src="/audio/slavik-pogosov-monro-mp3.mp3"></audio>
                           <div class="buttonsPp">
                                 <div class="btn play"><img class="img__src" src="/audio/play.svg"></div>
                           </div>
               </div>
-         </div> <!-- Эта музыка не будет работать щас т.к идет на проверку(P.S после проверки на synarge пойдет в git =) -->
+         </div> 
 
        <div class="QuestFirst">
               <div class="none-display" id="firstQuest"></div>
