--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
               <div class="shadow"></div>
               <div class="shadow"></div>
               <div class="shadow"></div>
+              <div class="back-preloader"></div>
               <span>Loading</span>
        </div>
 
@@ -27,7 +28,7 @@
                                 <div class="btn play"><img class="img__src" src="/audio/play.svg"></div>
                           </div>
               </div>
-         </div> 
+       </div> <!-- Эта музыка на проверке не будет работать т.к я нельзя скидывать ауидо плеер , но кнопка работает  =)) -->
 
        <div class="QuestFirst">
               <div class="none-display" id="firstQuest"></div>
