--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 <div class="btn play"><img class="img__src" src="/audio/play.svg"></div>
                           </div>
               </div>
-       </div> <!-- Эта музыка на проверке не будет работать т.к я нельзя скидывать ауидо плеер , но кнопка работает  =)) -->
+       </div>
 
        <div class="QuestFirst">
               <div class="none-display" id="firstQuest"></div>
